Fix Newsletter Background Image And Remove Bottom White Space

--- a/style.css
+++ b/style.css
@@ -198,6 +198,8 @@ img[src="images/iphone app.png"]{
 .newsletter{
     color: white;
     height: auto;
+    background-image: url(images/Uranus.jpeg);
+    background-size: cover;
 }
 .newsletter h1{
     padding-top: 50px;
@@ -207,7 +209,7 @@ img[src="images/iphone app.png"]{
     z-index: 1;
 }
 form{
-    margin: 45px 0;
+    margin: 45px 0 0;
     display: flex;
     flex-wrap: wrap;
     gap: calc(12px + 2vh);
@@ -232,14 +234,7 @@ form{
     font-size: 24px;
     color: white;
 }
-img[src="images/Uranus.jpeg"]{
-    width: 100vw;
-    height: 100%;
-    object-fit: cover;
-    position: absolute;
-    top: 0;
-    z-index: 0;
-}
+
 .newsletter button {
     width: 50vw;
     border-radius: 12px;
